test/expected/parse_pipe_no_command.out
shit: 2:6: error: Unable to build the pipeline because no command follows the pipe to receive the output.
     2 |  true |
       |       ^~ here.
